# Othello

./: AI.py  README.md  TODO.md  magnus.py  runner.py  victoris.py
Carl/: Board.py  main.py
Nathan/: othello.py  othello_function.py  othello_game.py  test.py
Old_AI/: GLOBALS.py
Old_AI/agent/: Agent.py  Player.py
Testing/: Board.py  kevin_west_test.py
agent/: AI.py  Agent.py  Player.py
ai/: ai.py
ai/brain/: Brain.py  RandomBrain.py
board/: Board.py  ColorBoard.py  board.py
game/: Game.py  main.py
instructions/: runner.py  timing_example.py
junk/: a.out  main.cpp
pybindTesting/: CMakeLists.txt  pybind_wrapper.cpp  script.py
